# pycurl

./: .gitignore  LICENSE  README.md  pycurl.spec  pyproject.toml  requirements.txt
.github/workflows/: main-test-build.yml  release.yml
app/: main.py
app/commands/: __init__.py  delete.py  get.py  init.py  patch.py  post.py  put.py
app/commands/auth/: auth.py
app/commands/authentication/: auth.py
app/commands/config/: config.py
app/commands/config/commands/: __init__.py  generate.py  get.py  set.py  show.py  validate.py
app/commands/docs/: docs.md  docs.py
app/commands/docs/commands/: __init__.py
app/commands/docs/commands/auth/: __init__.py  login.md  register.md
app/commands/docs/commands/config/: __init__.py  generate.md  get.md  set.md  show.md  validate.md
app/commands/docs/commands/delete/: __init__.py  delete.md
app/commands/docs/commands/get/: __init__.py  get.md
app/commands/docs/commands/init/: __init__.py  init.md
app/commands/docs/commands/patch/: __init__.py  patch.md
app/commands/docs/commands/post/: __init__.py  post.md
app/commands/docs/commands/put/: __init__.py  put.md
app/commands/docs/commands/token/: __init__.py  list.md  remove.md  set.md
app/commands/docs/commands/workflow/: __init__.py  usage.md
app/commands/token/: token.py
app/commands/token/commands/: __init__.py  list_tokens.py  remove_token.py  set_token.py
app/utils/: __init__.py  authUtils.py  configParser.py  saveRequest.py  saveToFile.py  tokenParser.py  ui.py
